--- a/views/admin_dashboard-manage_orders-sub_order.hbs
+++ b/views/admin_dashboard-manage_orders-sub_order.hbs
@@ -4,7 +4,7 @@
 <!--Description: This is the body of the admin_dashboard-manage_orders-sub_order page-->
 
 <!--This is the button on the top that brings you back to the manage accounts page-->
-<header></header><a href="/admin_dashboard/manage_accounts" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Orders</a>
+<header></header><a href="/admin_dashboard/manage_orders" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Orders</a>
   <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;height: 756px;">
       <!--This is the order details section-->
       <h1 class="text-center" style="color: rgb(133,135,150);font-size: 28px;height: 90px;">Order Details</h1>
@@ -19,51 +19,55 @@
                       <tbody>
                           <tr>
                               <td>Order Number</td>
-                              <td id="orderNumber">{Order Number}</td>
+                              <td id="orderNumber">{{orders.ordernum}}</td>
                           </tr>
                           <tr>
                               <td>Order Date</td>
-                              <td id="orderDate">{Order Date}</td>
+                              <td id="orderDate">{{orders.orderdate}}</td>
                           </tr>
                           <tr>
                               <td>Order Time</td>
-                              <td id="orderTime">{orderTime}</td>
+                              <td id="orderTime">{{orders.ordertime}}</td>
                           </tr>
                           <tr>
                               <td>Customer Number</td>
-                              <td id="customerNumber">{customerNumber}</td>
+                              <td id="customerNumber">{{orders.customernum}}</td>
                           </tr>
                           <tr>
                               <td>Order Total</td>
-                              <td id="orderTotal">{orderTotal}</td>
+                              <td id="orderTotal">{{orders.ordertotal}}</td>
                           </tr>
                           <tr>
                               <td>Quantity</td>
-                              <td id="orderQuantity">{quantity}</td>
+                              <td id="orderQuantity">{{orders.quantity}}</td>
                           </tr>
                           <tr>
                               <td>Credit ID</td>
-                              <td id="creditID">{creditID}</td>
+                              <td id="creditID">{{orders.creditid}}</td>
                           </tr>
                           <tr>
                               <td>Shipper ID</td>
-                              <td id="shipperID">{shipperID}</td>
+                              <td id="shipperID">{{orders.shipperid}}</td>
                           </tr>
                           <tr>
                               <td>Tracking ID</td>
-                              <td id="trackingID">{trackingID}</td>
+                              <td id="trackingID">{{orders.trackingnum}}</td>
                           </tr>
                           <tr>
                               <td>Tracking Number</td>
-                              <td id="trackingNumber">{trackingNumber}</td>
+                              <td id="trackingNumber">{{orders.trackingid}}</td>
                           </tr>
                           <tr>
                               <td>Item ID</td>
-                              <td id="itemID">{itemID}</td>
+                              <td id="itemID">{{orders.itemid}}</td>
+                          </tr>
+                          <tr>
+                            <td>Item Name</td>
+                            <td id="itemname">{{itemname}}</td>
                           </tr>
                           <tr>
                               <td>Merchant ID</td>
-                              <td id="merchantID">{merchantID}</td>
+                              <td id="merchantID">{{orders.merchantid}}</td>
                           </tr>
                           <tr></tr>
                       </tbody>
