--- a/views/admin_dashboard-manage_orders.hbs
+++ b/views/admin_dashboard-manage_orders.hbs
@@ -8,7 +8,7 @@
           <div class="row">
               <!--This is the welcome message the user sees-->
               <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
-                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
+                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {{userInfo.firstname}}!</strong></h1>
               </div>
           </div>
           <!--This is the nav bar that has the dashboard, manage inventory, manage orders, manage accounts-->
@@ -28,90 +28,33 @@
                           <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Manage Order(s)</h4>
                           <div class="col align-self-center m-auto">
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;">
-                                  <!--This is the table of orders-->
-                                  <table class="table table-hover">
-                                      <thead>
-                                          <tr>
-                                              <th>Order Number</th>
-                                              <th>Customer ID</th>
-                                              <th>Merchant ID</th>
-                                              <th>Order Total</th>
-                                              <th>Order Date</th>
-                                          </tr>
-                                      </thead>
-                                      <tbody>
-                                          <tr>
-                                              <td>Cell 1</td>
-                                              <td>Cell 2</td>
-                                              <td>Cell 2</td>
-                                              <td>Cell 2</td>
-                                              <td>Cell 2</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                      </tbody>
-                                  </table>
+                                {{#if hasOrders}}
+                                    <!--This is the table of orders-->
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Order Number</th>
+                                                <th>Customer ID</th>
+                                                <th>Item ID</th>
+                                                <th>Order Total</th>
+                                                <th>Order Date</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {{#each orders}}
+                                            <tr>
+                                                <td><a href="/admin_dashboard/manage_orders/sub_order/{{ordernum}}">{{ordernum}}</a></td>
+                                                <td>{{customernum}}</td>
+                                                <td><a href="/marketItem/{{itemid}}">{{itemid}}</a></td>
+                                                <td>{{ordertotal}}</td>
+                                                <td>{{orderdate}}</td>
+                                            </tr>
+                                            {{/each}}
+                                        </tbody>
+                                    </table>
+                                  {{else}}
+                                  <p> Sadly there haven't been any orders yet.
+                                  {{/if}}
                               </div>
                           </div>
                       </div>
@@ -122,7 +65,7 @@
   </div>
 
 
-<!--This is the log out button--> 
+<!--This is the log out button-->
 <input type=button value="logout" onClick="eraseCookie()"/>
 <!-- <h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
