--- a/views/admin_dashboard.hbs
+++ b/views/admin_dashboard.hbs
@@ -8,7 +8,7 @@
       <div class="container-fluid">
           <div class="row">
               <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
-                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
+                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {{userInfo.firstname}}!</strong></h1>
               </div>
           </div>
 
@@ -26,42 +26,35 @@
                       </div>
                       <!--This is the recent orders part that has on the dashboard-->
                       <div class="card-body">
-                          <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Account Dashboard</h4>
+                          <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Admin Dashboard</h4>
                           <div class="col align-self-center m-auto">
                               <h4 style="margin-top: 65px;"><em>Recent Order(s)</em></h4><a href="/admin_dashboard/manage_orders">View All Orders</a>
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;height: 280px;">
-                                  <!--This is the order table-->
-                                  <table class="table table-hover">
-                                      <thead>
-                                          <tr>
-                                              <th>Order</th>
-                                              <th>Date Placed</th>
-                                              <th>Delivery Method</th>
-                                          </tr>
-                                      </thead>
-                                      <tbody>
-                                          <tr>
-                                              <td>Cell 1</td>
-                                              <td>Cell 2</td>
-                                              <td>Cell 2</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                          <tr>
-                                              <td>Cell 3</td>
-                                              <td>Cell 4</td>
-                                              <td>Cell 4</td>
-                                          </tr>
-                                      </tbody>
-                                  </table>
+                                  {{#if hasOrders}}
+                                    <!--This is the order table-->
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Order</th>
+                                                <th>Customer Id</th>
+                                                <th>Date Placed</th>
+                                                <th>Delivery Method</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {{#each orders}}
+                                            <tr>
+                                                <td>{{ordernum}}</td>
+                                                <td>{{customernum}}</td>
+                                                <td>{{orderdate}}</td>
+                                                <td>{{shipperid}}</td>
+                                            </tr>
+                                            {{/each}}
+                                        </tbody>
+                                    </table>
+                                  {{else}}
+                                  <p> Sadly there haven't been any orders yet.
+                                  {{/if}}
                               </div>
                           </div>
                       </div>
