--- a/views/admin_dashboard-manage_inventory-create_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-create_inventory.hbs
@@ -14,124 +14,18 @@
               <!--This is the form to create an item-->
 
               <!--Come back and double check the action-->
-              <form method = "post" action = "/api/create_inventory">
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Item ID:</strong><input class="form-control" type="number" id="itemID" required="" min="0" step="1" placeholder="Item ID"></label></div>
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Merchant ID:</strong><input class="form-control" type="number" id="merchantID" min="0" step="1" required="" placeholder="Merchant ID"></label></div>
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Item Name:</strong><br><input class="form-control" type="text" id="itemName" placeholder="Name" required="" minlength="1"></label></div>
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Category:</strong><br><input class="form-control" type="text" id="itemCategory" placeholder="Category" required="" minlength="1"></label></div>
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Quantity:</strong><br><input class="form-control" type="number" id="itemQuantity" placeholder="Quantity" required="" min="0" step="1"></label></div>
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Price:</strong><br><input class="form-control" type="number" id="itemPrice" required="" placeholder="Price" min="1" step="1"></label></div>
-                  <div class="form-group" style="height: 165px;"><label style="font-size: 20px;"><strong>Image:</strong><br><input class="form-control" type="url" id="imageUrl" placeholder="Image URL" style="margin-bottom: 20px;"><input type="file" id="imageFile" rows="7" cols="50"></label>
+              <form method="post" action="/api/addItem">
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Merchant ID:</strong><input class="form-control" name="merchantId" type="number" id="merchantId" min="0" step="1" placeholder="Merchant ID"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Item Name:</strong><br><input class="form-control" name="name" type="text" id="name" placeholder="Name" required="" minlength="1"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Category:</strong><br><input class="form-control" name="cat" type="text" id="cat" placeholder="Category" required="" minlength="1"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Quantity:</strong><br><input class="form-control" name="quantity" type="number" id="quantity" placeholder="Quantity" required="" min="0" step="1"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Price:</strong><br><input class="form-control" name="price" type="float" id="price" required="" placeholder="Price" min="1" step="1"></label></div>
+                  <div class="form-group" style="height: 165px;"><label style="font-size: 20px;"><strong>Image:</strong><br><input name="imageLink" class="form-control" type="url" id="imageLink" placeholder="Image URL" style="margin-bottom: 20px;"><input type="file" id="imageFile" rows="7" cols="50"></label>
                       <small
                           class="form-text text-muted" style="font-size: 15px;"><em>Chose either by 'URL' or by 'File' for image selection</em></small>
                   </div>
-                  <div class="form-group"><label style="font-size: 20px;"><strong>Description:</strong><textarea class="form-control" id="itemDescription" rows="7" cols="50" required="" minlength="1" placeholder="Description" spellcheck="true" wrap="soft" maxlength="500"></textarea><br></label></div>
-              </form><button class="btn btn-primary" type="button" style="background-color: rgb(79,121,96);font-size: 20px;margin-bottom: 15px;">Submit Item</button></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Description:</strong><textarea class="form-control" id="desc" name="desc" rows="7" cols="50" required="" minlength="1" placeholder="Description" spellcheck="true" wrap="soft" maxlength="500"></textarea><br></label></div>
+                  <button class="btn btn-primary" type="submit" style="background-color: rgb(79,121,96);font-size: 20px;margin-bottom: 15px;">Submit Item</button>
+              </form></div>
       </div>
   </div>
-
-
-<!--This is the log out button-->
-<input type=button value="logout" onClick="eraseCookie()"/>
-<!-- <script src="../../javascripts/addItem.js" async></script>
-<script src="../javascripts/client.js" async></script>
-<h2> ADMIN ACCOUNT CREATE INVENTORY PAGE!!!! </h2>
-<h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
-<h2> {{email}} </h2>
-
-<ul>
-  <li> <a href="/admin_dashboard"> Main </a> </li>
-  <li> <a href="/admin_dashboard/manage_inventory"> Manage Inventory </a> </li>
-  <li> <a href="/admin_dashboard/manage_orders"> Manage Orders </a> </li>
-  <li> <a href="/admin_dashboard/manage_accounts"> Manage Accounts </a> </li>
-</ul>
-
-
-<h1> Create/Update item </h1>
-  <table>
-    <tr>
-      <td>Item Id</td>
-      <td> <input type="textbox" id="itemId"></td>
-    </tr>
-    <tr>
-      <td>Merchant Id</td>
-      <td> <input type="textbox" id="merchantId"></td>
-    </tr>
-    <tr>
-      <td>Name</td>
-      <td> <input type="textbox" id="name"></td>
-    </tr>
-    <tr>
-      <td>Category</td>
-      <td> <input type="textbox" id="cat"></td>
-    </tr>
-    <tr>
-      <td>Description</td>
-      <td> <input type="textbox" id="desc"></td>
-    </tr>
-    <tr>
-      <td>Image Link</td>
-      <td> <input type="textbox" id="imageLink"></td>
-    </tr>
-    <tr>
-      <td>Price</td>
-      <td> <input type="textbox" id="price"></td>
-    </tr>
-    <tr>
-      <td>Quantity</td>
-      <td> <input type="textbox" id="quantity"></td>
-    </tr>
-    <tr>
-      <td colspan="2"> <input type="button" value="submit" onclick="addItem();">
-    </tr>
-  </table>
-<h1> Items </h1>
-  <table>
-    <tr>
-      <td> itemid </td>
-      <td> itemcat </td>
-      <td> itemdesc </td>
-      <td> quantity </td>
-      <td> merchantid </td>
-      <td> itemname </td>
-      <td> price </td>
-      <td> itemimagelink </td>
-    </tr>
-    {{#each items}}
-      <tr>
-        <td> {{itemid}} </td>
-        <td> {{itemcat}} </td>
-        <td> {{itemdesc}} </td>
-        <td> {{quantity}} </td>
-        <td> {{merchantid}} </td>
-        <td> {{itemname}} </td>
-        <td> {{price}} </td>
-        <td> <img src="{{itemimagelink}}"> </td>
-      </tr>
-    {{/each}}
-  </table>
-<h1> END ITEMS </h1> -->
-
-<script> function eraseCookie() {
-  // make the api call
-  fetch("/api/logout",
-    {method: "POST",
-      headers: {
-        "Accept": "application/json",
-        "Content-Type": "application/json"
-      },
-    })
-    .then(function(response) {
-      if (response.status !== 200) {
-        alert("Logout failed. Try again.");
-        location.reload(true);
-        return
-      } else {
-        // send to a webpage
-        location.reload(true);
-        return;
-      }
-    });
-}
-
-</script>
