--- a/views/market.hbs
+++ b/views/market.hbs
@@ -13,17 +13,24 @@
                 <p style="font-size: 25px;margin-top: 30px;margin-bottom: 0px;color: rgb(133,135,150);">From Our Home To Yours.<br>Choose From Our Wide Range Of Award Winning Cheeses!</p>
             </div>
         </div>
+
         <div class="container border rounded border-light shadow" style="margin-top: 25px;margin-bottom: 70px;padding: 0px;padding-top: 0px;">
+
             <div class="shadow-lg content">
-              {{#each items}}
+
 
                 <div class="row justify-content-center align-items-center" style="padding-bottom: 30px;padding-top: 0px;margin-right: 0px;margin-left: 0px;background-color: #fffaf2;">
+
                     <div class="col-md-auto" style="padding-right: 12px;padding-top: 0px;max-width: 100%;background-color: #fffaf2;">
-<div class="products" style="background-color: #fffaf2;">
+
+                        <div class="products" style="background-color: #fffaf2;">
 
                             <div class="row no-gutters justify-content-center align-items-center justify-content-sm-center justify-content-md-center justify-content-lg-center justify-content-xl-center" style="padding-top: 20px;background-color: #fffaf2;background-size: auto;filter: blur(0px);">
+                              {{#each items}}
+
                                 <div class="col-12 col-md-6 col-lg-6 col-xl-5 text-center align-self-center" style="padding: 10px;padding-right: 20px;margin-left: 15px;padding-left: 20px;margin-right: 30px;max-width: 100%;margin-top: 30px;background-color: #fffaf2;margin-bottom: 10px;">
                                     <!--This is the market item called through the item id-->
+
                                     <div class="border rounded shadow clean-product-item" style="background-color: #fbf5f5;padding: 14px;">
                                         <div class="image"><a href="/marketItem/{{itemid}}"><img class="img-fluid d-block mx-auto" id="itemPicture" src="{{itemimagelink}}" style="min-height: 160px;min-width: 200px;"></a></div>
                                         <div class="text-center product-name" style="margin-top: 10px;margin-bottom: 15px;font-size: 20px;"><a class="text-center" id="itemName" href="/marketItem/{{itemid}}" style="font-size: 24px;"><strong><em>{{itemname}}</em></strong></a></div>
@@ -40,11 +47,17 @@
                                             </div>
                                         </div>
                                     </div>
+
                                     <!--This is the add to cart button on the bottom-->
-                                    <button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" onclick="addToCart({{itemid}}, 1);"style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button></div>
-            {{/each}}
+                                    <button class="btn btn-primary btn-block border rounded shadow" id="addToCart" type="button" onclick="addToCart({{itemid}}, 1);"style="background-color: rgb(79,121,96);margin-bottom: 0px;height: 45px;font-size: 18px;"><i class="icon-basket"></i>&nbsp;Add To Cart</button>
+
+</div>
+{{/each}}
+
             </div>
+
             </div>
+
             </div>
             </div>
             </div>
