Removed some of the validations from the html file

--- a/views/forgot_password.hbs
+++ b/views/forgot_password.hbs
@@ -1,4 +1,4 @@
-<!--File: fogot_password.hbs-->
+<!--File: forgot_password.hbs-->
 <!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
 <!--Date: 11/09/2019-->
 <!--Description: This is the body of the forgot_password page-->
@@ -24,7 +24,7 @@
                         <form class="user" action = "/api/forgot_password" method = "post">
                             <!--This is where the user inputs their email and we can see the filler text of enter email address-->
                             <div class="form-group"><input class="form-control form-control-user" type="text"  id="email" placeholder="Enter Email Address..." name="email" style="font-size: 18px;">
-                      
+
                              </div><button class="btn btn-primary btn-block text-white btn-user"
                                 type="submit" onclick = "verifyEmailAddress(email.value, id)" style="font-size: 18px;background-color: rgb(79,121,96);">Reset Password</button></form>
                         <div class="text-center">
