--- a/views/check_out.hbs
+++ b/views/check_out.hbs
@@ -91,7 +91,7 @@
                         </div>
                       </div>
                         <div class="col-sm-12" id="proceed">
-                            <div class="form-group"><button class="btn btn-primary btn-block" onclick = "verifyName(firstName.value, id); verifyName(lastName.value, id); verifyPhoneNum(phoneNumber.value, id); verifyAddress(shippingAddress1.value, id); verifyAddress2(shippingAddress2.value, id); verifyCity(shippingCity.value, id); verifyZip(shippingZipCode.value, id); verifyState(shippingState.value, id);" id="proceedShipping" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;font-size: 20px;">Proceed</button></div>
+                            <div class="form-group"><button class="btn btn-primary btn-block" onclick = "verifyFirstName(firstName.value, id); verifyLastName(lastName.value, id); verifyPhoneNum(phoneNumber.value, id); verifyAddress(shippingAddress1.value, id); verifyAddress2(shippingAddress2.value, id); verifyCity(shippingCity.value, id); verifyZip(shippingZipCode.value, id); verifyState(shippingState.value, id);" id="proceedShipping" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;font-size: 20px;">Proceed</button></div>
                         </div>
                     </div>
                 </form>
@@ -157,97 +157,97 @@
                         <h3 class="title" style="font-size: 30px;margin-bottom: 40px;"><strong>Credit Card Details</strong></h3>
                         <div class="form-row">
                             <div class="col-sm-7">
-                                <div class="form-group"><label for="card-holder">Card Holder</label><input class="form-control" type="text" id="cardHolder" onchange = "verifyCardHolder(this.value, id)" placeholder="Card Holder">
+                                <div class="form-group"><label for="card-holder">Card Holder</label><input class="form-control" type="text" id="cardHolder"  placeholder="Card Holder">
                                   <!--This is the validation for the card holders-->
                                   <script type = "text/javascript">
-                                    function verifyCardHolder(cardHolder, id){
-                                      var cardHolderRegEx = new RegExp(/^[a-zA-Z\s]+$/);
-                                      if(cardHolderRegEx.test(cardHolder) != true){
-                                        alert("Please use your name in the card holder field");
-                                      }
-                                    }
+                                  //  function verifyCardHolder(cardHolder, id){
+                                    //   var cardHolderRegEx = new RegExp(/^[a-zA-Z\s]+$/);
+                                    //   if(cardHolderRegEx.test(cardHolder) != true){
+                                    //     alert("Please use your name in the card holder field");
+                                    //   }
+                                    // }
                                   </script>
                                 </div>
                             </div>
                             <!--This is the expiration field-->
                             <div class="col-sm-5">
                                 <div class="form-group"><label>Expiration date (12/20, 06/21)</label>
-                                    <div class="input-group expiration-date"><input class="form-control" type="text" minlength = "2" maxlength = "2" id="monthExpr" onchange = "verifyExpiration(this.value, id)" placeholder="MM"><input class="form-control" type="text" id="yearExpr" minlength = "2" maxlength = "2" onchange = "verifyExpirationYear(this.value, id)" placeholder="YY">
+                                    <div class="input-group expiration-date"><input class="form-control" type="text" minlength = "2" maxlength = "2" id="monthExpr"  placeholder="MM"><input class="form-control" type="text" id="yearExpr" minlength = "2" maxlength = "2" onchange = "verifyExpirationYear(this.value, id)" placeholder="YY">
                                       <!--This is the validation for the month-->
                                       <script type = "text/javascript">
-                                        function verifyExpiration(expirationMonth, id){
-                                          var expirationDateRegEx = new RegExp(/^[0-9]+$/);
-                                          if(expirationMonth < 1 || expirationMonth > 12){
-                                            alert("Please enter a valid month");
-                                          }
-                                          if(expirationDateRegEx.test(expirationMonth) != true){
-                                            alert("Please use two numbers for the expiration month");
-                                          }
-                                        }
+                                        // function verifyExpiration(expirationMonth, id){
+                                        //   var expirationDateRegEx = new RegExp(/^[0-9]+$/);
+                                        //   if(expirationMonth < 1 || expirationMonth > 12){
+                                        //     alert("Please enter a valid month");
+                                        //   }
+                                        //   if(expirationDateRegEx.test(expirationMonth) != true){
+                                        //     alert("Please use two numbers for the expiration month");
+                                        //   }
+                                        // }
                                         </script>
                                         <!--This is the validation for the year-->
                                         <script type = "text/javascript">
-                                        function verifyExpirationYear(expirationYear, id){
-                                          var expirationDateRegEx = new RegExp(/^[0-9]+$/);
-                                          if(expirationDateRegEx.test(expirationYear) != true){
-                                            alert("Please use two numbers for the expiriation year");
-                                          }
-                                        }
+                                        // function verifyExpirationYear(expirationYear, id){
+                                        //   var expirationDateRegEx = new RegExp(/^[0-9]+$/);
+                                        //   if(expirationDateRegEx.test(expirationYear) != true){
+                                        //     alert("Please use two numbers for the expiriation year");
+                                        //   }
+                                        // }
                                       </script>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-8">
                                 <!--This is the credit card form-->
-                                <div class="form-group"><label for="card-number">Card Number</label><input class="form-control" minlength = "13" maxlength = "16" type="text" onchange = "verifyCard(this.value, id)" id="cardNumber" placeholder="Card Number">
+                                <div class="form-group"><label for="card-number">Card Number</label><input class="form-control" minlength = "13" maxlength = "16" type="text"  id="cardNumber" placeholder="Card Number">
                                   <!--This is the credit card validation-->
                                   <script type = "text/javascript">
-                                    function verifyCard(cardNumber, id){
-                                      //This is the regular expression for visa, mastercard, amex, and discover
-                                      var visa = new RegExp("^(?:4[0-9]{12}(?:[0-9]{3})?)");
-                                      var mastercard = new RegExp("^5[1-5][0-9]{14}$");
-                                      var amex = new RegExp("3[47][0-9]{13}$");
-                                      var discover = new RegExp("6(?:011|5[0-9]{2})[0-9]{12}");
-                                      var goodCard = false;
-                                      //Here we test every card and see which it may be.
-                                      if(visa.test(cardNumber) == true){
-                                        goodCard = true;
-                                      }
-                                      if(mastercard.test(cardNumber) == true){
-                                        goodCard = true;
-                                      }
-                                      if(amex.test(cardNumber) == true){
-                                        goodCard = true;
-                                      }
-                                      if(discover.test(cardNumber) == true){
-                                        goodCard = true;
-                                      }
-                                      //If none of the validations work then we need a new card number
-                                      if(!goodCard){
-                                        alert("Please enter a valid credit card");
-                                      }
-                                    }
+                                    // function verifyCard(cardNumber, id){
+                                    //   //This is the regular expression for visa, mastercard, amex, and discover
+                                    //   var visa = new RegExp("^(?:4[0-9]{12}(?:[0-9]{3})?)");
+                                    //   var mastercard = new RegExp("^5[1-5][0-9]{14}$");
+                                    //   var amex = new RegExp("3[47][0-9]{13}$");
+                                    //   var discover = new RegExp("6(?:011|5[0-9]{2})[0-9]{12}");
+                                    //   var goodCard = false;
+                                    //   //Here we test every card and see which it may be.
+                                    //   if(visa.test(cardNumber) == true){
+                                    //     goodCard = true;
+                                    //   }
+                                    //   if(mastercard.test(cardNumber) == true){
+                                    //     goodCard = true;
+                                    //   }
+                                    //   if(amex.test(cardNumber) == true){
+                                    //     goodCard = true;
+                                    //   }
+                                    //   if(discover.test(cardNumber) == true){
+                                    //     goodCard = true;
+                                    //   }
+                                    //   //If none of the validations work then we need a new card number
+                                    //   if(!goodCard){
+                                    //     alert("Please enter a valid credit card");
+                                    //   }
+                                    // }
                                   </script>
                                 </div>
                             </div>
                             <!--This is the cvc form-->
                             <div class="col-sm-4">
-                                <div class="form-group"><label for="cvc">CVC</label><input class="form-control" type="text" onchange = "verifyCVC(this.value, id)" id="cvc" placeholder="CVC" minlength="3" maxlength="4">
+                                <div class="form-group"><label for="cvc">CVC</label><input class="form-control" type="text"  id="cvc" placeholder="CVC" minlength="3" maxlength="4">
                                 <!--This is the cvc validation-->
                                 <script type = "text/javascript">
-                                  function verifyCVC(cvc, id){
-                                    var cvcRegExp = new RegExp(/^[0-9]+$/);
-                                    var cvcLength = document.getElementById("cvc").value;
-                                    if(cvcRegExp.test(cvc) != true || cvcLength.length < 3){
-                                      alert("Please enter a valid cvc combination");
-                                    }
-                                  }
+                            //      function verifyCVC(cvc, id){
+                            //        var cvcRegExp = new RegExp(/^[0-9]+$/);
+                            //        var cvcLength = document.getElementById("cvc").value;
+                            //        if(cvcRegExp.test(cvc) != true || cvcLength.length < 3){
+                            //         alert("Please enter a valid cvc combination");
+                            //        }
+                            //      }
                                 </script>
                               </div>
                             </div>
                             <!--This is the big button on the bottom of the page-->
                             <div class="col-sm-12">
-                                <div class="form-group"><button class="btn btn-primary btn-block" id="confirmPurchase" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;">Confirm Purchase</button></div>
+                                <div class="form-group"><button class="btn btn-primary btn-block" onclick = "verifyCardHolder(cardHolder.value, id); verifyExpiration(monthExpr.value, id); verifyExpirationYear(yearExpr.value, id); verifyCard(cardNumber.value, id); verifyCVC(cvc.value, id);" id="confirmPurchase" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;">Confirm Purchase</button></div>
                             </div>
                         </div>
                     </div>
