--- a/views/create_account.hbs
+++ b/views/create_account.hbs
@@ -46,7 +46,7 @@
 
                                 </div>
                                 <div class="col-sm-6"><input class="form-control form-control-user" type="password" id="repeatpassword" placeholder="Repeat Password" name="password_repeat" style="font-size: 18px;"></div>
-                            </div><button class="btn btn-primary btn-block text-white btn-user" onclick = "verifyFirstName(firstName.value, id); verifyLastName(lastName.value, id); verifyUser_Name(username.value, id); verifyEmail(email.value, id); verifyPassword(password.value, id); verifyPasswordRepeat(repeatpassword.value, id)" type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Register Account</button>
+                            </div><button class="btn btn-primary btn-block text-white btn-user" onclick = "verifyFirstName(firstName.value, id); verifyLastName(lastName.value, id); verifyUser_Name(username.value, id); verifyEmail(email.value, id); verifyPassword(password.value, id); verifyPasswordRepeat(password.value, repeatpassword.value, id)" type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Register Account</button>
                             <hr>
                             <hr>
                         </form>
